--- a/packages/storybook-html/src/components/card/card.html
+++ b/packages/storybook-html/src/components/card/card.html
@@ -1,5 +1,5 @@
 
-<!-- Default card -->
+<!-- Card default -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
@@ -12,11 +12,7 @@
           <h2 class="card__title">
             <a class="card__link" href="#">Title of item</a>
           </h2>
-          <div class="card__date" tabindex="0">Sunday 16 August, 2015</div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-          <div class="card__summary" tabindex="0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+          <div class="card__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
           </div>
         </div>
@@ -35,13 +31,7 @@
           <h2 class="card__title">
             <a class="card__link" href="#">Title of item</a>
           </h2>
-          <div class="card__date" tabindex="0">Sunday 16 August, 2015</div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-          <div class="card__summary" tabindex="0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-          </div>
+          <div class="card__date">Sunday 16 August, 2015</div>
         </div>
       </div>
       <div class="card__footer"></div>
@@ -58,11 +48,7 @@
           <h2 class="card__title">
             <a class="card__link" href="#">Title of item</a>
           </h2>
-          <div class="card__date" tabindex="0">Sunday 16 August, 2015</div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-          <div class="card__summary" tabindex="0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+          <div class="card__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
           </div>
         </div>
@@ -72,7 +58,7 @@
   </div>
 </div>
 
-<!-- Default card with links -->
+<!-- Card with links -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
@@ -85,11 +71,7 @@
           <h2 class="card__title">
             <a class="card__link" href="#">Title of item</a>
           </h2>
-          <div class="card__date" tabindex="0">Sunday 16 August, 2015</div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-          <div class="card__summary" tabindex="0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+          <div class="card__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
           </div>
         </div>
@@ -108,18 +90,43 @@
   </div>
 </div>
 
+<!-- Card with additional text -->
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
+    <div class="card">
+      <div class="card__header"></div>
+      <div class="card__body">
+        <a class="card__link" href="#">
+          <div class="card__image-container" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg');"></div>
+        </a>
+        <div class="card__content">
+          <h2 class="card__title">
+            <a class="card__link" href="#">Title of item</a>
+          </h2>
+          <div class="card__date">Sunday 16 August, 2015</div>
+          <div class="card__location">
+            <a class="card__link" href="#">Gatton campus</a>
+          </div>
+          <div class="card__summary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          </div>
+        </div>
+      </div>
+      <div class="card__footer"></div>
+    </div>
+  </div>
+</div>
+
 <!-- Overlay card square -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/st-lucia">
-      <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
+      <div class="card card--square card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
         <div class="card__header"></div>
         <div class="card__body">
           <div class="card__content">
-            <div class="card__title">
-              <span tabindex="0">St Lucia</span>
-            </div>
-            <div class="card__summary" tabindex="0"></div>
+            <div class="card__title">Title of item</div>
+            <div class="card__summary"></div>
           </div>
         </div>
       </div>
@@ -127,10 +134,58 @@
   </div>
 </div>
 
+<!-- Overlay card portrait -->
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
+    <div class="card card--portrait card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+      <div class="card__header"></div>
+      <div class="card__body">
+        <div class="card__content">
+          <h2 class="card__title">
+            <a class="card__link" href="#">Title of item</a>
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Overlay card landscape -->
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
+    <div class="card card--landscape card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+      <div class="card__header"></div>
+      <div class="card__body">
+        <div class="card__content">
+          <h2 class="card__title">
+            <a class="card__link" href="#">Title of item</a>
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Overlay card compact -->
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--6">
+    <div class="card card--compact card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+      <div class="card__header"></div>
+      <div class="card__body">
+        <div class="card__content">
+          <h2 class="card__title">
+            <a class="card__link" href="#">Title of item</a>
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Overlay card square with additional text -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
-    <div class="card card--background-image card--square" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+    <div class="card card--square card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
       <div class="card__header"></div>
       <div class="card__body">
         <div class="card__content">
@@ -153,67 +208,17 @@
 <!-- Overlay card square with link -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
-    <div class="card card--background-image card--square" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+    <div class="card card--square card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
       <div class="card__header"></div>
       <div class="card__body">
         <div class="card__content">
           <h2 class="card__title">
             <a class="card__link" href="#">Title of item</a>
           </h2>
-          <div class="card__date">
-            <a class="card__link" href="#">Sunday 16 August, 2015</a>
-          </div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
         </div>
       </div>
       <div class="card__footer">
         <a class="card__link" href="#">Action link</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Overlay card portrait -->
-<div class="uq-grid">
-  <div class="uq-grid__col uq-grid__col--6">
-    <div class="card card--background-image card--portrait" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
-      <div class="card__header"></div>
-      <div class="card__body">
-        <div class="card__content">
-          <h2 class="card__title">
-            <a class="card__link" href="#">Title of item</a>
-          </h2>
-          <div class="card__date">
-            <a class="card__link" href="#">Sunday 16 August, 2015</a>
-          </div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Overlay card landscape -->
-<div class="uq-grid">
-  <div class="uq-grid__col uq-grid__col--6">
-    <div class="card card--background-image card--landscape" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
-      <div class="card__header"></div>
-      <div class="card__body">
-        <div class="card__content">
-          <h2 class="card__title">
-            <a class="card__link" href="#">Title of item</a>
-          </h2>
-          <div class="card__date">
-            <a class="card__link" href="#">Sunday 16 August, 2015</a>
-          </div>
-          <div class="card__location">
-            <a class="card__link" href="#">Gatton campus</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
