--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -28,7 +28,7 @@
     grid-area: mainheader;
     grid-template-areas:
     "menutoggle logo searchtoggle"
-    "search search search"
+    // "search search search"
     "mainnav-mobile mainnav-mobile mainnav-mobile";
     
 
@@ -37,8 +37,7 @@
       margin-right:auto;
       max-width:73.25rem;
       grid-template-areas:
-        "logo mainnav searchtoggle"
-        "search search search";
+        "logo mainnav searchtoggle";
       padding-left: 1rem;
       padding-right: 1rem;
     }
@@ -60,7 +59,7 @@
   & .main-nav__toggle {
     background: none;
     border: none;
-    padding: 2rem 1.5rem;
+    padding: 1.5rem;
 
     @media #{core.$screen-lg-up} {
       padding: 1rem;
@@ -89,19 +88,43 @@
     cursor: pointer;
     color: #fff;
 
+    & .uq-icon--standard--search {
+      display: flex;
+    }
+    & .uq-icon--standard--close {
+      display: none;
+    }
+
     @media #{core.$screen-lg-up} {
       display: flex;
       align-items: center;
       width: 100%;
     }
 
-    &:hover,
-    &:focus {
+    &:hover {
       background-color: #48206c;
       text-decoration: underline;
       outline: none;
     }
+
   }
+
+  .main-nav__search-toggle--is-open {
+    & .uq-icon--standard--search {
+      display: none;
+    }
+    & .uq-icon--standard--close {
+      display: flex;
+
+      &::before {
+        @media #{core.$screen-lg-up} {
+          background-size: 80%;
+        }
+
+      }
+    }
+  }
+
 
   &__logo {
     grid-area: logo;
@@ -117,10 +140,8 @@
   &__main-nav-wrapper {
     grid-area: mainnav;
     display: none;
-    // background: #fff;
-    // position: absolute;
     width: 100%;
-    z-index: 3;
+    z-index: 99;
 
     @media #{core.$screen-lg-up} {
       display: block;
@@ -171,7 +192,7 @@
     text-decoration: none;
     padding: 1rem 1.5rem;
     transition: background-color .25s,border-color .25s;
-    font-weight: 500;
+    font-weight: 400;
     position: relative;
     border-bottom: 2px solid core.$uq-purple;
 
@@ -186,18 +207,18 @@
 
     &::after {
       content: "";
-      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%23FFFFFF'%3E%3Cpath d='M14.285 5.145l-6 6.167a.41.41 0 01-.598 0L1.715 5.145' fill='none' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-      background-size: 0.6rem;
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m7 10 5 5 5-5' stroke='%23FFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+      // background-size: 0.6rem;
       background-repeat: no-repeat;
       width: 1rem;
       height: 1rem;
       transform: translateY(50%);
       position: absolute;
-      top: 1.9rem;
+      top: 1.65rem;
       right: 1.75rem;
 
       @media #{core.$screen-lg-up} {
-        right: 1rem;
+        right: 1.3rem;
       }
     }
   }
@@ -292,8 +313,22 @@
     }
   }
 
+  &__search-wrapper {
+    background: core.$uq-purple;
+    position: absolute;
+    width: 100%;
+    top: 4.1rem;
+    z-index: 50;
+    box-shadow: 0 0.75rem 1.5rem rgb(24 24 24 / 20%);
+
+    @media #{core.$screen-lg-up} {
+      top: 8.4rem;
+    }
+
+  }
+
   &__search {
-    grid-area: search;
+    //grid-area: search;
     transition: opacity .2s ease, transform .2s ease, visibility .2s ease, height .2s ease-in-out;
     transform: translateY(-0.5rem);
     visibility: hidden;
@@ -302,7 +337,11 @@
     padding: 0 1.5rem;
 
     @media #{core.$screen-lg-up} {
-      padding: 0;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      margin-left:auto;
+      margin-right:auto;
+      max-width:73.25rem;
     }
 
 
@@ -390,6 +429,16 @@
     }
   }
 
+  &__search-label {
+    font-size: .8rem !important;
+    line-height: 1.7 !important;
+
+    @media #{core.$screen-lg-up} {
+      font-size: 1rem !important;
+      line-height: 1.4 !important;
+    }
+  }
+
   &__main-nav-wrapper,
   &__black-nav-wrapper {
     @media #{core.$screen-lg-down} {
@@ -403,7 +452,7 @@
     left: 0;
     background: #f5f5f5;
     width: 100%;
-    z-index: 40;
+    z-index: 30;
     height: 0;
     visibility: hidden;
     box-shadow: 0 0.75rem 1.5rem rgb(24 24 24 / 20%);
@@ -452,9 +501,11 @@
       }
     }
   }
-
-
 } 
+
+body.no-scroll {
+  position: fixed;
+}
 
 // Slide mobile menu 
 
@@ -469,7 +520,7 @@
   z-index:1000;
   grid-area: mainnav-mobile;
   position:fixed;
-  top:0;
+  top: 4.2rem;
   right:0;
   overflow-y:auto;
 }
@@ -587,3 +638,5 @@
   .slide-menu .btn:last-of-type:before {content:"✕";
       margin-right:.5rem;
   }
+
+  
